k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-app

  template:
    metadata:
      labels:
        app: devops-app

    spec:
      containers:
        - name: devops-app
          image: devops-app:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 80

          volumeMounts:
            - name: app-storage
              mountPath: /var/log/app

      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-pvc
